@@ -79,6 +79,10 @@ lib/SPVM/Net/SSLeay/OCSP.c
 lib/SPVM/Net/SSLeay/OCSP.config
 lib/SPVM/Net/SSLeay/OCSP.pm
 lib/SPVM/Net/SSLeay/OCSP.spvm
+lib/SPVM/Net/SSLeay/OCSP_BASICRESP.c
+lib/SPVM/Net/SSLeay/OCSP_BASICRESP.config
+lib/SPVM/Net/SSLeay/OCSP_BASICRESP.pm
+lib/SPVM/Net/SSLeay/OCSP_BASICRESP.spvm
 lib/SPVM/Net/SSLeay/OCSP_REQUEST.c
 lib/SPVM/Net/SSLeay/OCSP_REQUEST.config
 lib/SPVM/Net/SSLeay/OCSP_REQUEST.pm
