@@ -1,0 +1,18 @@
+// Copyright (c) 2024 Yuki Kimoto
+// MIT License
+
+#include "spvm_native.h"
+
+#include <openssl/ssl.h>
+#include <openssl/err.h>
+
+#include <openssl/ocsp.h>
+
+static const char* FILE_NAME = "Net/SSLeay/OCSP_BASICRESP.c";
+
+int32_t SPVM__Net__SSLeay__OCSP_BASICRESP__foo(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  return 0;
+}
+
+
